Fixed wrapping issue

--- a/app/assets/stylesheets/themes/default/pages/_matches.scss
+++ b/app/assets/stylesheets/themes/default/pages/_matches.scss
@@ -65,6 +65,7 @@ div#match {
     .team-2 {
       max-height: $title-height;
       overflow: hidden;
+      clear: none;
     }
 
     .team-1 {
